hphp/hack/test/typecheck/hh_fixme13.php.exp
File "hh_fixme13.php", line 10, characters 10-10:
Invalid argument (Typing[4110])
File "hh_fixme13.php", line 3, characters 12-17:
This is a string
File "hh_fixme13.php", line 10, characters 10-10:
It is incompatible with an int
